unpackaged/main/default/objects/Work_Order_Contact__c/Work_Order_Contact__c.object-meta.xml
<CustomObject>
    <label>Work Order Contact</label>
    <nameField>
        <displayFormat>WOC-{000000}</displayFormat>
        <label>Work Order Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>